# opmed-fetch-data

./: .git-blame-ignore-revs  .gitignore  .ruff.toml  README.md  fake_data.py  hmc.py  infra.main.w  infra.test.w  infra.w  lambda_function.py  main.w  package-lock.json  package.json  proactive.test.w  proactive.w  pyproject.toml  requirements-dev.txt  requirements.txt  services.py  test.py  utils.py  wing.py
FHIR/: api.py  fetch.py
HMC/: fetch.py
MOCK/: fetch.py
doctors/: lambda_function.py
fetch/: fake_data.py  lambda_function.py  test.py
flex_block/: flex_block_handler.py  get_potential_flex_blocks.py
flex_blocks/: flex_block_handler.py  get_potential_flex_blocks.py
get_file/: lambda_function.py
get_list/: lambda_function.py
jwt_auth/: lambda_handler.py
models/: __init__.py  additional_resource_model.py  block_model_fetched.py  current_procedure_model.py  fetch_data.py  one_ofresponse_fetch_items.py  operation_model_fetched.py  procedure_model.py  request_schema.py  response_fetch.py  time_model.py
predict_block_usage/: .env  requirements-predict.txt
preferences_cards/: lambda_function.py
proactive-block-realise/: proactive_block_realise.py
proactive-block-release/: proactive_block_realise.py
proactive_block_release/: proactive_block_realise.py  proactive_block_realise_handler.py
proactive_nudge_reminder/: flex_blocks_notification.py  notification_message_details.py  nudge_reminder.py  proactive_block_release_notification.py  send_email.py  send_sms.py
query_copilot/: ask_query_copilot.py  constants.py  query_copilot.py
(+49 files in other folders)
