[tool.poetry]
name = "fetch-data"
version = "0.1.0"
description = ""
authors = ["nitzanpal <nitzan@greatmix.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.29.0,<2.30.0"
boto3 = ">=1.26.123,<1.27.0"
faker = ">=18.6.0,<18.7.0"
pydantic = ">=1.10.7,<1.11.0"
fhirpy = "^1.3.1"

[tool.poetry.group.dev.dependencies]
aws-lambda-context = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
