[tool.poetry]
name = "fetch-data"
version = "0.1.0"
description = ""
authors = ["nitzanpal <nitzan@greatmix.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
faker = "^24.0.0"
boto3 = "^1.34.56"
json-fingerprint = "^0.14.0"
pydantic = ">=1.10.7,<1.11.0"
fhirpy = "^1.3.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.3.0"}
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
